--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@
     color: white;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 }
 /* Box1 */
 
 .nav-logo{
-    height: 60px;
+    
     width: 130px;
 }
 
@@ -59,6 +60,11 @@
     height: 40px;
     width: 700px;
     border-radius: 5px;
+    justify-content: space-evenly;
+}
+
+.nav-search:hover{
+    border: 2px solid orange;
 }
 
 .search-select{
@@ -68,4 +74,108 @@
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     border : none;
+}
+
+.search-input{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+
+.search-icon{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    color: black;
+    background-color: #FDDA0D;
+    border-radius: 5px;
+}
+
+/* box4 */
+
+.nav-line1{
+    font-size: 12px;
+}
+
+.nav-line2{
+    font-size: 14px;
+    font-weight: bolder;
+    background-color: #0f1111;
+}
+
+/*box6 */
+
+.nav-cart{
+    display: flex;
+    font-size: 30px;
+}
+
+/*panel*/
+
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items: center;
+    
+}
+
+.panel-option p{
+    display: inline;
+    font-size: 14px;
+    margin: 5px 0px 6px 0px;
+    padding: 8px 5px;
+    font-weight: 400;
+}
+
+.panel-option{
+    width: 70%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* main hero section */
+
+.hero-section{
+    background-image: url(hero_image.jpg);
+    background-size: cover;
+    height: 350px;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+
+.hero-mess{
+    background-color: white;
+    color: black;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    margin-bottom: 30px;
+    width: 90%;
+}
+
+/* shop section */
+
+.shop-section{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+}
+
+.Box{
+    border: 2px solid black;
+    height: 400px;
+    width: 23%;
+    background-color: white;
+    padding: 20px 0px 15px;
+}
+
+.box-img{
+    height: 80%;
 }
